# hivemind

./: .gitignore  Cargo.toml  Code_One.hx  Enter.hx  LICENSE  README.md  import.hx
.github/workflows/: ci.yml
crates/access/: Cargo.toml
crates/access/src/: lib.rs
crates/batch/: Cargo.toml
crates/batch/src/: lib.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: lib.rs
crates/browser-runner/: Cargo.toml
crates/browser-runner/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: access.rs  artifact.rs  canonical.rs  errors.rs  execution.rs  interface.rs  job.rs  lib.rs  manifest.rs  policy.rs  provider.rs  receipt.rs  registry.rs  routing.rs  runner.rs  trust.rs  validation.rs
crates/evals/: Cargo.toml
crates/evals/src/: lib.rs
crates/fine-tune/: Cargo.toml
crates/fine-tune/src/: lib.rs
crates/governance/: Cargo.toml
crates/governance/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/local-runner/: Cargo.toml
crates/local-runner/src/: lib.rs
crates/marketplace/: Cargo.toml
crates/marketplace/src/: lib.rs
crates/media/: Cargo.toml
crates/media/src/: lib.rs
crates/miner/: Cargo.toml
crates/miner/src/: lib.rs
crates/moderation/: Cargo.toml
crates/moderation/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/openai-compat/: Cargo.toml
crates/openai-compat/src/: lib.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/provider-compat/: Cargo.toml
crates/provider-compat/src/: lib.rs
crates/publisher/: Cargo.toml
crates/publisher/src/: lib.rs
crates/realtime/: Cargo.toml
crates/realtime/src/: lib.rs
crates/receipts/: Cargo.toml
crates/receipts/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/remote-runner/: Cargo.toml
crates/remote-runner/src/: lib.rs
crates/research/: Cargo.toml
crates/research/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  consumer.rs  docs.rs  main.rs  provider.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/streams/: Cargo.toml
crates/streams/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
crates/vector/: Cargo.toml
crates/vector/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
crates/web/static/: index.html  styles.css
crates/weeb3-adapter/: Cargo.toml
crates/weeb3-adapter/src/: lib.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
docs/pkg/: hivemind_web.d.ts  hivemind_web.js  hivemind_web_bg.wasm  hivemind_web_bg.wasm.d.ts  package.json
examples/benchmarks/embedding-basic-v1/: benchmark.json  dataset.json
examples/consumer/: lan-chat.json  local-chat.json
examples/provider/: lan-mock-provider.json  mock-provider.json  openai-compatible-external-provider.json  openai-compatible-managed-provider.json
examples/registry/: index.json
examples/registry/shards/: all-all.json  capability-classification.json  capability-embedding.json  kind-model.json  kind-tool.json  publisher-0x0000000000000000000000000000000000000000.json  target-browser-wasm.json  target-local-mock.json
hax/: ohio.note
