[workspace]
members = [
    "crates/access",
    "crates/batch",
    "crates/benchmarks",
    "crates/browser-runner",
    "crates/core",
    "crates/evals",
    "crates/fine-tune",
    "crates/governance",
    "crates/identity",
    "crates/jobs",
    "crates/local-runner",
    "crates/marketplace",
    "crates/media",
    "crates/miner",
    "crates/moderation",
    "crates/observability",
    "crates/openai-compat",
    "crates/package",
    "crates/policy",
    "crates/provider-compat",
    "crates/publisher",
    "crates/receipts",
    "crates/realtime",
    "crates/research",
    "crates/registry",
    "crates/remote-runner",
    "crates/router",
    "crates/sdk",
    "crates/server",
    "crates/storage",
    "crates/streams",
    "crates/validator",
    "crates/vector",
    "crates/web",
    "crates/weeb3-adapter",
    "crates/workflow",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Hivemind contributors"]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
gloo-net = "0.6"
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
schemars = { version = "0.8", features = ["chrono"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Event", "HtmlInputElement", "HtmlTextAreaElement", "InputEvent", "MouseEvent"] }
yew = { version = "0.21", features = ["csr"] }
