[package]
name = "hivemind-identity"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hivemind-core = { path = "../core" }
rand_core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
