[package]
name = "hivemind-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hivemind-core = { path = "../core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
