[package]
name = "hivemind-miner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hivemind-core = { path = "../core" }
hivemind-identity = { path = "../identity" }
hivemind-marketplace = { path = "../marketplace" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
hivemind-remote-runner = { path = "../remote-runner" }
