[package]
name = "hivemind-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hivemind-core = { path = "../core" }
hivemind-governance = { path = "../governance" }
hivemind-jobs = { path = "../jobs" }
hivemind-marketplace = { path = "../marketplace" }
hivemind-miner = { path = "../miner" }
hivemind-package = { path = "../package" }
hivemind-receipts = { path = "../receipts" }
hivemind-registry = { path = "../registry" }
hivemind-router = { path = "../router" }
hivemind-streams = { path = "../streams" }
hivemind-storage = { path = "../storage" }
hivemind-validator = { path = "../validator" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
