[package]
name = "hivemind-package"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hex.workspace = true
hivemind-core = { path = "../core" }
hivemind-storage = { path = "../storage" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
