[package]
name = "hivemind-remote-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
hivemind-access = { path = "../access" }
hivemind-core = { path = "../core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
