[package]
name = "hivemind-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
hivemind-access = { path = "../access" }
hivemind-benchmarks = { path = "../benchmarks" }
hivemind-browser-runner = { path = "../browser-runner" }
hivemind-core = { path = "../core" }
hivemind-local-runner = { path = "../local-runner" }
hivemind-marketplace = { path = "../marketplace" }
hivemind-package = { path = "../package" }
hivemind-policy = { path = "../policy" }
hivemind-publisher = { path = "../publisher" }
hivemind-receipts = { path = "../receipts" }
hivemind-registry = { path = "../registry" }
hivemind-remote-runner = { path = "../remote-runner" }
hivemind-router = { path = "../router" }
hivemind-storage = { path = "../storage" }
hivemind-validator = { path = "../validator" }
hivemind-weeb3-adapter = { path = "../weeb3-adapter" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
