[package]
name = "hivemind-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
hivemind-core = { path = "../core" }
chrono.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
reqwest.workspace = true
tar.workspace = true
