[package]
name = "hivemind-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-net.workspace = true
hivemind-browser-runner = { path = "../browser-runner" }
hivemind-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
yew.workspace = true
