[package]
name = "hivemind-weeb3-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
hivemind-core = { path = "../core" }
hivemind-storage = { path = "../storage" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
