[package]
name = "hivemind-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hivemind-core = { path = "../core" }
hivemind-identity = { path = "../identity" }
hivemind-policy = { path = "../policy" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
